sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: ')' expected but ';' found.
 		if (plusPetit (i+1;+))
                                  ^AlgBubbleSort1:10: error: illegal start of simple expression
 		if (plusPetit (i+1;+))
                                    ^AlgBubbleSort1:22: error: 'while' expected but '}' found.
}
^